--- a/try.html
+++ b/try.html
@@ -1,5 +1,5 @@
 <!doctype html><meta charset=utf-8>
-<title> Image Server </title>
+<title> Shields.io: Quality metadata badges for open source projects </title>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
 <meta name='description' content='We serve fast and scalable informational
 images as badges for GitHub, Travis CI, Jenkins, Wordpress and many more
