--- a/try.html
+++ b/try.html
@@ -370,6 +370,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/apm/v/vim-mode.svg' alt=''/></td>
   <td><code>https://img.shields.io/apm/v/vim-mode.svg</code></td>
   </tr>
+  <tr><th> CTAN: </th>
+  <td><img src='/ctan/v/tex.svg' alt=''/></td>
+  <td><code>https://img.shields.io/ctan/v/tex.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3> Miscellaneous </h3>
