--- a/try.html
+++ b/try.html
@@ -446,6 +446,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/cocoapods/l/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
   </tr>
+  <tr><th> CTAN: </th>
+    <td><img src='/ctan/l/tex.svg' alt='' /></td>
+    <td><code>https://img.shields.io/ctan/l/tex.svg</code></td>
+  </tr>
   <tr><th> CocoaPods: </th>
     <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
