Add Puppet Forge user stats

--- a/try.html
+++ b/try.html
@@ -498,6 +498,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/puppetforge/f/camptocamp/openssl.svg' alt=''/></td>
   <td><code>https://img.shields.io/puppetforge/f/camptocamp/openssl.svg</code></td>
   </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='/puppetforge/rc/camptocamp.svg' alt=''/></td>
+  <td><code>https://img.shields.io/puppetforge/rc/camptocamp.svg</code></td>
+  </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='/puppetforge/mc/camptocamp.svg' alt=''/></td>
+  <td><code>https://img.shields.io/puppetforge/mc/camptocamp.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Your Badge </h2>
