--- a/try.html
+++ b/try.html
@@ -370,7 +370,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/apm/v/vim-mode.svg' alt=''/></td>
   <td><code>https://img.shields.io/apm/v/vim-mode.svg</code></td>
   </tr>
-  <tr><th> CTAN: </th>
+  <tr><th data-keywords='tex'> CTAN: </th>
   <td><img src='/ctan/v/tex.svg' alt=''/></td>
   <td><code>https://img.shields.io/ctan/v/tex.svg</code></td>
   </tr>
@@ -450,7 +450,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/cocoapods/l/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
   </tr>
-  <tr><th> CTAN: </th>
+  <tr><th data-keywords='tex'> CTAN: </th>
     <td><img src='/ctan/l/tex.svg' alt='' /></td>
     <td><code>https://img.shields.io/ctan/l/tex.svg</code></td>
   </tr>
