Indent fix, allow keyword search for CTAN
Part of #373

--- a/try.html
+++ b/try.html
@@ -374,7 +374,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/cpan/v/Config-Augeas.svg' alt=''/></td>
   <td><code>https://img.shields.io/cpan/v/Config-Augeas.svg</code></td>
   </tr>
-  <tr><th> CTAN: </th>
+  <tr><th data-keywords='tex'> CTAN: </th>
   <td><img src='/ctan/v/tex.svg' alt=''/></td>
   <td><code>https://img.shields.io/ctan/v/tex.svg</code></td>
   </tr>
@@ -458,7 +458,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/cpan/l/Config-Augeas.svg' alt='' /></td>
     <td><code>https://img.shields.io/cpan/l/Config-Augeas.svg</code></td>
   </tr>
-  <tr><th> CTAN: </th>
+  <tr><th data-keywords='tex'> CTAN: </th>
     <td><img src='/ctan/l/tex.svg' alt='' /></td>
     <td><code>https://img.shields.io/ctan/l/tex.svg</code></td>
   </tr>
