--- a/try.html
+++ b/try.html
@@ -370,7 +370,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/apm/v/vim-mode.svg' alt=''/></td>
   <td><code>https://img.shields.io/apm/v/vim-mode.svg</code></td>
   </tr>
-  <tr><th> CPAN: </th>
+  <tr><th data-keywords='perl'> CPAN: </th>
   <td><img src='/cpan/v/Config-Augeas.svg' alt=''/></td>
   <td><code>https://img.shields.io/cpan/v/Config-Augeas.svg</code></td>
   </tr>
@@ -454,7 +454,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/cocoapods/l/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
   </tr>
-  <tr><th> CPAN: </th>
+  <tr><th data-keywords='perl'> CPAN: </th>
     <td><img src='/cpan/l/Config-Augeas.svg' alt='' /></td>
     <td><code>https://img.shields.io/cpan/l/Config-Augeas.svg</code></td>
   </tr>
