Add rubygems user stats

--- a/try.html
+++ b/try.html
@@ -525,6 +525,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Puppet Forge: </th>
   <td><img src='/puppetforge/mc/camptocamp.svg' alt=''/></td>
   <td><code>https://img.shields.io/puppetforge/mc/camptocamp.svg</code></td>
+  <tr><th data-keywords='ruby'> Gems: </th>
+  <td><img src='/gem/u/raphink.svg' alt=''/></td>
+  <td><code>https://img.shields.io/gem/u/raphink.svg</code></td>
   </tr>
 </tbody></table>
 
