--- a/try.html
+++ b/try.html
@@ -525,6 +525,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Puppet Forge: </th>
   <td><img src='/puppetforge/mc/camptocamp.svg' alt=''/></td>
   <td><code>https://img.shields.io/puppetforge/mc/camptocamp.svg</code></td>
+  <tr><th> OpenHub: </th>
+  <td><img src='/openhub/u/kr/raphink.svg' alt=''/></td>
+  <td><code>https://img.shields.io/openhub/u/kr/raphink.svg</code></td>
+  </tr>
+  <tr><th> OpenHub: </th>
+  <td><img src='/openhub/u/kp/raphink.svg' alt=''/></td>
+  <td><code>https://img.shields.io/openhub/u/kp/raphink.svg</code></td>
   </tr>
 </tbody></table>
 
