Add StackExchange integration

--- a/try.html
+++ b/try.html
@@ -525,6 +525,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Puppet Forge: </th>
   <td><img src='/puppetforge/mc/camptocamp.svg' alt=''/></td>
   <td><code>https://img.shields.io/puppetforge/mc/camptocamp.svg</code></td>
+  <tr><th> StackExchange: </th>
+  <td><img src='/stackexchange/tex/r/951.svg' alt=''/></td>
+  <td><code>https://img.shields.io/stackexchange/tex/r/951.svg</code></td>
   </tr>
 </tbody></table>
 
