Add StackExchange integration

--- a/try.html
+++ b/try.html
@@ -742,6 +742,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/ansible/role/3078.svg' alt=''/></td>
     <td><code>https://img.shields.io/ansible/role/3078.svg</code></td>
   </tr>
+  <tr><th> StackExchange: </th>
+    <td><img src='/stackexchange/tex/r/951.svg' alt=''/></td>
+    <td><code>https://img.shields.io/stackexchange/tex/r/951.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
