--- a/try.html
+++ b/try.html
@@ -746,6 +746,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/stackexchange/tex/r/951.svg' alt=''/></td>
     <td><code>https://img.shields.io/stackexchange/tex/r/951.svg</code></td>
   </tr>
+  <tr><th> StackExchange: </th>
+  <td><img src='/stackexchange/stackoverflow/t/augeas.svg' alt=''/></td>
+  <td><code>https://img.shields.io/stackexchange/stackoverflow/t/augeas.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
