--- a/try.html
+++ b/try.html
@@ -302,6 +302,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/packagist/vpre/symfony/symfony.svg' alt=''/></td>
   <td><code>https://img.shields.io/packagist/vpre/symfony/symfony.svg</code></td>
   </tr>
+  <tr><th> Clojars: </th>
+  <td><img src='/clojars/v/prismic.svg' alt=''/></td>
+  <td><code>https://img.shields.io/clojars/v/prismic.svg</code></td>
+  </tr>
   <tr><th> CocoaPods: </th>
   <td><img src='/cocoapods/v/AFNetworking.svg' alt='' /></td>
   <td><code>https://img.shields.io/cocoapods/v/AFNetworking.svg</code></td>
