--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/chocolatey/dt/scriptcs.svg' alt=''/></td>
   <td><code>https://img.shields.io/chocolatey/dt/scriptcs.svg</code></td>
   </tr>
-  <tr><th> PyPI: </th>
+  <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='https://img.shields.io/pypi/dm/Django.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/dm/Django.svg</code></td>
   </tr>
-  <tr><th> PyPI: </th>
+  <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='https://img.shields.io/pypi/dw/Django.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/dw/Django.svg</code></td>
   </tr>
-  <tr><th> PyPI: </th>
+  <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='https://img.shields.io/pypi/dd/Django.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/dd/Django.svg</code></td>
   </tr>
@@ -268,6 +268,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/apm/dm/vim-mode.svg' alt=''/></td>
   <td><code>https://img.shields.io/apm/dm/vim-mode.svg</code></td>
   </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='https://img.shields.io/puppetforge/dt/camptocamp/openldap.svg' alt=''/></td>
+  <td><code>https://img.shields.io/puppetforge/dt/camptocamp/openldap.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table class='badge'><tbody>
@@ -279,7 +283,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/node/v/gh-badges.svg' alt=''/></td>
   <td><code>https://img.shields.io/node/v/gh-badges.svg</code></td>
   </tr>
-  <tr><th> PyPI: </th>
+  <tr><th data-keywords='python'> PyPI: </th>
   <td><img src='https://img.shields.io/pypi/v/nine.svg' alt=''/></td>
   <td><code>https://img.shields.io/pypi/v/nine.svg</code></td>
   </tr>
@@ -371,6 +375,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/apm/v/vim-mode.svg' alt=''/></td>
   <td><code>https://img.shields.io/apm/v/vim-mode.svg</code></td>
   </tr>
+  <tr><th data-keywords='perl'> CPAN: </th>
+  <td><img src='https://img.shields.io/cpan/v/Config-Augeas.svg' alt=''/></td>
+  <td><code>https://img.shields.io/cpan/v/Config-Augeas.svg</code></td>
+  </tr>
   <tr><th data-keywords='tex'> CTAN: </th>
   <td><img src='https://img.shields.io/ctan/v/tex.svg' alt=''/></td>
   <td><code>https://img.shields.io/ctan/v/tex.svg</code></td>
@@ -439,7 +447,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/apm/l/vim-mode.svg' alt=''/></td>
     <td><code>https://img.shields.io/apm/l/vim-mode.svg</code></td>
   </tr>
-  <tr><th> PyPI: </th>
+  <tr><th data-keywords='python'> PyPI: </th>
     <td><img src='https://img.shields.io/pypi/l/Django.svg' alt=''/></td>
     <td><code>https://img.shields.io/pypi/l/Django.svg</code></td>
   </tr>
@@ -450,6 +458,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> CocoaPods: </th>
     <td><img src='https://img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th data-keywords='perl'> CPAN: </th>
+    <td><img src='https://img.shields.io/cpan/l/Config-Augeas.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cpan/l/Config-Augeas.svg</code></td>
   </tr>
   <tr><th data-keywords='tex'> CTAN: </th>
     <td><img src='https://img.shields.io/ctan/l/tex.svg' alt='' /></td>
@@ -498,6 +510,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Talk.ai: </th>
   <td><img src='https://img.shields.io/talk/t/9c81ff703b.svg' alt=''/></td>
   <td><code>https://img.shields.io/talk/t/9c81ff703b.svg</code></td>
+  </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='https://img.shields.io/puppetforge/e/camptocamp/openssl.svg' alt=''/></td>
+  <td><code>https://img.shields.io/puppetforge/e/camptocamp/openssl.svg</code></td>
+  </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='https://img.shields.io/puppetforge/f/camptocamp/openssl.svg' alt=''/></td>
+  <td><code>https://img.shields.io/puppetforge/f/camptocamp/openssl.svg</code></td>
+  </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='https://img.shields.io/puppetforge/rc/camptocamp.svg' alt=''/></td>
+  <td><code>https://img.shields.io/puppetforge/rc/camptocamp.svg</code></td>
+  </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='https://img.shields.io/puppetforge/mc/camptocamp.svg' alt=''/></td>
+  <td><code>https://img.shields.io/puppetforge/mc/camptocamp.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -625,7 +653,6 @@ is where the current server got started.
 <a class='photo' href='https://github.com/seanlinsley'>
   <img alt='seanlinsley' src='https://avatars.githubusercontent.com/u/688886?s=80'>
 </a>
-<br>
 <a class='photo' href='https://github.com/alrra'>
   <img alt='alrra' src='https://avatars.githubusercontent.com/u/1223565?s=80'>
 </a>
@@ -635,6 +662,7 @@ is where the current server got started.
 <a class='photo' href='https://github.com/g105b'>
   <img alt='g105b' src='https://avatars2.githubusercontent.com/u/358014?s=80'>
 </a>
+<br>
 <a class='photo' href='https://github.com/sebmck'>
   <img alt='sebmck' src='https://avatars.githubusercontent.com/u/853712?s=80'>
 </a>
@@ -659,7 +687,6 @@ is where the current server got started.
 <a class='photo' href='https://github.com/Mikulas'>
   <img alt='Mikulas' src='https://gravatar.com/avatar/daa06ea257d7820ff84735a55b931ec8'>
 </a>
-<br>
 <a class='photo' href='https://github.com/seggidins'>
   <img alt='seggidins' src='https://avatars.githubusercontent.com/u/1946610?s=80'>
 </a>
@@ -669,6 +696,7 @@ is where the current server got started.
 <a class='photo' href='https://github.com/akashivskyy'>
   <img alt='akashivskyy' src='https://avatars.githubusercontent.com/u/565231?s=80'>
 </a>
+<br>
 <a class='photo' href='https://github.com/rmasters'>
   <img alt='rmasters' src='https://avatars.githubusercontent.com/u/34284?s=80'>
 </a>
@@ -695,6 +723,9 @@ is where the current server got started.
 </a>
 <a class='photo' href='https://github.com/nitram509'>
   <img alt='nitram509' src='https://www.gravatar.com/avatar/fa01e907fd400c42d481f431c4410954.png'>
+</a>
+<a class='photo' href='https://github.com/raphink'>
+  <img alt='raphink' src='https://avatars.githubusercontent.com/u/650430?s=80'>
 </a>
 <p><small>:wq</small></p>
 </main>
