--- a/try.html
+++ b/try.html
@@ -2,7 +2,7 @@
 <title> Shields.io: Quality metadata badges for open source projects </title>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
 <meta name='description' content='We serve fast and scalable informational
-images as badges for GitHub, Travis CI, Jenkins, Wordpress and many more
+images as badges for GitHub, Travis CI, Jenkins, WordPress and many more
 services. Use them to track the state of your projects, or for promotional
 purposes.'>
 <link rel='icon' type='image/png' href='favicon.png'>
@@ -243,7 +243,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/hexpm/dt/plug.svg' alt=''/></td>
   <td><code>https://img.shields.io/hexpm/dt/plug.svg</code></td>
   </tr>
-  <tr><th> Wordpress: </th>
+  <tr><th> WordPress: </th>
   <td><img src='/wordpress/plugin/dt/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
   </tr>
@@ -362,11 +362,11 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
   <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
   </tr>
-  <tr><th> Wordpress plugin: </th>
+  <tr><th> WordPress plugin: </th>
   <td><img src='/wordpress/plugin/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/v/akismet.svg</code></td>
   </tr>
-  <tr><th> Wordpress: </th>
+  <tr><th> WordPress: </th>
   <td><img src='/wordpress/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/v/akismet.svg</code></td>
   </tr>
@@ -494,7 +494,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/followers/espadrine.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
   </tr>
-  <tr><th> Wordpress rating: </th>
+  <tr><th> WordPress rating: </th>
   <td><img src='/wordpress/plugin/r/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
