website: Word*P*ress and heading anchors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title> Shields.io: Quality metadata badges for open source projects </title>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
 <meta name='description' content='We serve fast and scalable informational
-images as badges for GitHub, Travis CI, Jenkins, Wordpress and many more
+images as badges for GitHub, Travis CI, Jenkins, WordPress and many more
 services. Use them to track the state of your projects, or for promotional
 purposes.'>
 <link rel='icon' type='image/png' href='favicon.png'>
@@ -63,7 +63,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 
 <section id='suggestedBadges'></section>
 
-<h3> Build </h3>
+<h3 id="build"> Build </h3>
 <table class='badge'><tbody>
   <tr><th> Travis: </th>
     <td><img src='https://img.shields.io/travis/joyent/node.svg' alt=''/></td>
@@ -166,7 +166,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><code>https://img.shields.io/sensiolabs/i/45afb680-d4e6-4e66-93ea-bcfa79eb8a87.svg</code></td>
   </tr>
 </tbody></table>
-<h3> Downloads </h3>
+<h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='https://img.shields.io/npm/dm/localeval.svg' alt=''/></td>
@@ -244,7 +244,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/hexpm/dt/plug.svg' alt=''/></td>
   <td><code>https://img.shields.io/hexpm/dt/plug.svg</code></td>
   </tr>
-  <tr><th> Wordpress: </th>
+  <tr><th> WordPress: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/dt/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
   </tr>
@@ -273,7 +273,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/puppetforge/dt/camptocamp/openldap.svg</code></td>
   </tr>
 </tbody></table>
-<h3> Version </h3>
+<h3 id="version"> Version </h3>
 <table class='badge'><tbody>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='https://img.shields.io/npm/v/npm.svg' alt=''/></td>
@@ -363,11 +363,11 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
   <td><code>https://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
   </tr>
-  <tr><th> Wordpress plugin: </th>
+  <tr><th> WordPress plugin: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/v/akismet.svg</code></td>
   </tr>
-  <tr><th> Wordpress: </th>
+  <tr><th> WordPress: </th>
   <td><img src='https://img.shields.io/wordpress/v/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/v/akismet.svg</code></td>
   </tr>
@@ -385,7 +385,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </tr>
 </tbody></table>
 
-<h3> Miscellaneous </h3>
+<h3 id="miscellaneous"> Miscellaneous </h3>
 <table class='badge'><tbody>
   <tr><th> Gratipay: </th>
     <td><img src='https://img.shields.io/gratipay/JSFiddle.svg' alt=''/></td>
@@ -495,7 +495,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/github/followers/espadrine.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
   </tr>
-  <tr><th> Wordpress rating: </th>
+  <tr><th> WordPress rating: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
@@ -532,7 +532,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </tr>
 </tbody></table>
 
-<h2> Your Badge </h2>
+<h2 id="your-badge"> Your Badge </h2>
 
 <form action='javascript:makeImage()' id='imageMaker'>
   <input class='short' name='subject' placeholder='subject'/>
@@ -582,7 +582,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 <img src='https://img.shields.io/badge/color-ff69b4-ff69b4.svg' alt='ff69b4'/>
 </p>
 
-<h2> Styles </h2>
+<h2 id="styles"> Styles </h2>
 <p>
 The following styles are available (flat is the default as of Feb 1st 2015):
 </p>
@@ -610,7 +610,7 @@ We also support <code>.json</code>, <code>.png</code> and a few others,
 but use them responsibly.
 </p>
 
-<h2> Like This? </h2>
+<h2 id="like-this"> Like This? </h2>
 
 <p>
 Tell your favorite badge service to use it! <br/>
@@ -630,7 +630,7 @@ And tell us, we might be able to bring it to you anyway!
 is where the current server got started.
 </p>
 
-<h2> Contributors </h2>
+<h2 id="contributors"> Contributors </h2>
 
 <a class='photo' href='https://github.com/espadrine'>
   <img alt='espadrine' src='https://gravatar.com/avatar/8c3bee0764c781e1b0b8c2e53f0f11fe'>
