website: sonarqube fix.

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
   </tr>
   <tr><th> SonarQube Coverage: </th>
-    <td><img src='https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core:master/coverage.svg' alt=''/></td>
-    <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core:master/coverage.svg</code></td>
+    <td><img src='https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg</code></td>
   </tr>
   <tr><th> TeamCity CodeBetter Coverage: </th>
     <td><img src='https://img.shields.io/teamcity/coverage/bt1242.svg' alt=''/></td>
