--- a/try.html
+++ b/try.html
@@ -529,6 +529,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/gem/u/raphink.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/u/raphink.svg</code></td>
   </tr>
+  <tr><th> apistatus.org: </th>
+  <td><img src='/apistatus/o/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvMjAw.svg' alt=''/></td>
+  <td><code>https://img.shields.io/apistatus/o/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvMjAw.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
@@ -728,6 +732,9 @@ is where the current server got started.
 </a>
 <a class='photo' href='https://github.com/raphink'>
   <img alt='raphink' src='https://avatars.githubusercontent.com/u/650430?s=80'>
+</a>
+<a class='photo' href='https://github.com/montanaflynn'>
+  <img alt='montanaflynn' src='https://avatars.githubusercontent.com/u/24260?s=80'>
 </a>
 <p><small>:wq</small></p>
 </main>
