Github Releases Download counter
possible combinations:

- `/github/downloads/:user/:repo/latest/total.svg`
- `/github/downloads/:user/:repo/:release_id/total.svg`
- `/github/downloads/:user/:repo/:release_id/:asset_name.svg`

--- a/try.html
+++ b/try.html
@@ -167,6 +167,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
+  <tr><th data-keywords='github'> Github: </th>
+  <td><img src='/github/downloads/atom/atom/latest/total.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/downloads/atom/atom/latest/total.svg</code></td>
+  </tr>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt=''/></td>
   <td><code>https://img.shields.io/npm/dm/localeval.svg</code></td>
