--- a/try.html
+++ b/try.html
@@ -271,6 +271,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/puppetforge/dt/camptocamp/openldap.svg' alt=''/></td>
   <td><code>https://img.shields.io/puppetforge/dt/camptocamp/openldap.svg</code></td>
   </tr>
+  <tr><th data-keywords='dub'> DUB: </th>
+  <td><img src='/dub/dd/vibe-d.svg' alt=''/></td>
+  <td><code>https://img.shields.io/dub/dd/vibe-d.svg</code></td>
+  </tr>
+  <tr><th data-keywords='dub'> DUB: </th>
+  <td><img src='/dub/dw/vibe-d.svg' alt=''/></td>
+  <td><code>https://img.shields.io/dub/dw/vibe-d.svg</code></td>
+  </tr>
+  <tr><th data-keywords='dub'> DUB: </th>
+  <td><img src='/dub/dm/vibe-d/latest.svg' alt=''/></td>
+  <td><code>https://img.shields.io/dub/dm/vibe-d/latest.svg</code></td>
+  </tr>
+  <tr><th data-keywords='dub'> DUB: </th>
+  <td><img src='/dub/dt/vibe-d/0.7.23.svg' alt=''/></td>
+  <td><code>https://img.shields.io/dub/dt/vibe-d/0.7.23.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
@@ -381,6 +397,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='tex'> CTAN: </th>
   <td><img src='/ctan/v/tex.svg' alt=''/></td>
   <td><code>https://img.shields.io/ctan/v/tex.svg</code></td>
+  </tr>
+  <tr><th data-keywords='dub'> DUB: </th>
+  <td><img src='/dub/v/vibe-d.svg' alt=''/></td>
+  <td><code>https://img.shields.io/dub/v/vibe-d.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -528,6 +548,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='ruby'> Gems: </th>
   <td><img src='/gem/u/raphink.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/u/raphink.svg</code></td>
+  </tr>
+  <tr><th data-keywords='dub'> DUB: </th>
+  <td><img src='/dub/l/vibe-d.svg' alt=''/></td>
+  <td><code>https://img.shields.io/dub/l/vibe-d.svg</code></td>
   </tr>
 </tbody></table>
 
