--- a/try.html
+++ b/try.html
@@ -529,13 +529,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/gem/u/raphink.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/u/raphink.svg</code></td>
   </tr>
-  <tr><th> APIstatus.org: </th>
-  <td><img src='/apistatus/o/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvMjAw.svg' alt=''/></td>
+  <tr><th> APIstatus.org online: </th>
+  <td><img src='/apistatus/online/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvMjAw.svg' alt=''/></td>
   <td><code>https://img.shields.io/apistatus/o/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvMjAw.svg</code></td>
   </tr>
-  <tr><th> APIstatus.org: </th>
-  <td><img src='/apistatus/t/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvNTAy.svg' alt=''/></td>
-  <td><code>https://img.shields.io/apistatus/t/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvNTAy.svg</code></td>
+  <tr><th> APIstatus.org code: </th>
+  <td><img src='/apistatus/status/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvNTAy.svg' alt=''/></td>
+  <td><code>https://img.shields.io/apistatus/s/aHR0cHM6Ly9tb2NrYmluLmNvbS9zdGF0dXMvNTAy.svg</code></td>
   </tr>
 </tbody></table>
 
