--- a/try.html
+++ b/try.html
@@ -152,6 +152,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/codecov/c/github/codecov/example-python.svg' alt=''/></td>
     <td><code>https://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
   </tr>
+  <tr><th> Coverity Scan: </th>
+    <td><img src='/coverity/scan/3997.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coverity/scan/3997.svg</code></td>
+  </tr>
   <tr><th> HHVM: </th>
     <td><img src='/hhvm/symfony/symfony.svg' alt=''/></td>
     <td><code>https://img.shields.io/hhvm/symfony/symfony.svg</code></td>
