Add Scrutinizer Build integration
Closes #312

--- a/try.html
+++ b/try.html
@@ -148,6 +148,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg</code></td>
   </tr>
+  <tr><th> Scrutinizer Build: </th>
+    <td><img src='/scrutinizer/build/g/filp/whoops.svg' alt=''/></td>
+    <td><code>https://img.shields.io/scrutinizer/build/g/filp/whoops.svg</code></td>
+  </tr>
   <tr><th> Codecov: </th>
     <td><img src='/codecov/c/github/codecov/example-python.svg' alt=''/></td>
     <td><code>https://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
