Add docker stars integration

--- a/try.html
+++ b/try.html
@@ -553,6 +553,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/dub/l/vibe-d.svg' alt=''/></td>
   <td><code>https://img.shields.io/dub/l/vibe-d.svg</code></td>
   </tr>
+  <tr><th data-keywords='docker stars'> Docker Stars: </th>
+  <td><img src='/docker/stars/mashape/mockbin.svg' alt=''/></td>
+  <td><code>https://img.shields.io/docker/stars/mashape/mockbin.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
