--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg</code></td>
   </tr>
+  <tr><th> Scrutinizer Build: </th>
+    <td><img src='https://img.shields.io/scrutinizer/build/g/filp/whoops.svg' alt=''/></td>
+    <td><code>https://img.shields.io/scrutinizer/build/g/filp/whoops.svg</code></td>
+  </tr>
   <tr><th> Codecov: </th>
     <td><img src='https://img.shields.io/codecov/c/github/codecov/example-python.svg' alt=''/></td>
     <td><code>https://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
@@ -519,6 +523,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/github/followers/espadrine.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
   </tr>
+  <tr><th data-keywords='github license'> GitHub license: </th>
+  <td><img src='https://img.shields.io/github/license/mashape/apistatus.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
+  </tr>
   <tr><th> WordPress rating: </th>
   <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
@@ -757,6 +765,9 @@ is where the current server got started.
 </a>
 <a class='photo' href='https://github.com/raphink'>
   <img alt='raphink' src='https://avatars.githubusercontent.com/u/650430?s=80'>
+</a>
+<a class='photo' href='https://github.com/montanaflynn'>
+  <img alt='montanaflynn' src='https://avatars.githubusercontent.com/u/24260?s=80'>
 </a>
 <p><small>:wq</small></p>
 </main>
