Add color support for SonarQube Technical Debt

--- a/try.html
+++ b/try.html
@@ -132,6 +132,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg' alt=''/></td>
     <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/coverage.svg</code></td>
   </tr>
+  <tr><th> SonarQube Tech Debt: </th>
+    <td><img src='/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/tech_debt.svg' alt=''/></td>
+    <td><code>https://img.shields.io/sonar/http/sonar.qatools.ru/ru.yandex.qatools.allure:allure-core/tech_debt.svg</code></td>
+  </tr>
   <tr><th> TeamCity CodeBetter Coverage: </th>
     <td><img src='/teamcity/coverage/bt1242.svg' alt=''/></td>
     <td><code>https://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
