Add CocoaPods documentation percent

--- a/try.html
+++ b/try.html
@@ -518,6 +518,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
   </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='/cocoapods/metrics/doc-percent/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/metrics/doc-percent/AFNetworking.svg</code></td>
+  </tr>
   <tr><th> Wheelmap: </th>
     <td><img src='/wheelmap/a/2323004600.svg' alt='' /></td>
     <td><code>https://img.shields.io/wheelmap/a/2323004600.svg</code></td>
