Refactor and add pulls

--- a/try.html
+++ b/try.html
@@ -557,6 +557,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/docker/stars/mashape/kong.svg' alt=''/></td>
   <td><code>https://img.shields.io/docker/stars/mashape/kong.svg</code></td>
   </tr>
+  <tr><th data-keywords='docker pulls'> Docker Pulls: </th>
+  <td><img src='/docker/pulls/mashape/kong.svg' alt=''/></td>
+  <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
