--- a/try.html
+++ b/try.html
@@ -594,8 +594,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/dub/l/vibe-d.svg</code></td>
   </tr>
   <tr><th data-keywords='docker stars'> Docker Stars: </th>
-  <td><img src='/docker/stars/mashape/kong.svg' alt=''/></td>
-  <td><code>https://img.shields.io/docker/stars/mashape/kong.svg</code></td>
+  <td><img src='/docker/stars/_/ubuntu.svg' alt=''/></td>
+  <td><code>https://img.shields.io/docker/stars/_/ubuntu.svg</code></td>
   </tr>
   <tr><th data-keywords='docker pulls'> Docker Pulls: </th>
   <td><img src='/docker/pulls/mashape/kong.svg' alt=''/></td>
