--- a/try.html
+++ b/try.html
@@ -166,7 +166,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </tr>
   <tr><th> Codecov private: </th>
     <td><img src='/codecov/c/github/codecov/example-python.svg' alt=''/></td>
-    <td><code>https://img.shields.io/codecov/c/t:YOURTOKEN/github/codecov/example-python.svg</code></td>
+    <td><code>https://img.shields.io/codecov/c/token/YOURTOKEN/github/codecov/example-python.svg</code></td>
   </tr>
   <tr><th> Coverity Scan: </th>
     <td><img src='/coverity/scan/3997.svg' alt=''/></td>
