Support for optional dependencies mode of David

--- a/try.html
+++ b/try.html
@@ -463,6 +463,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/david/dev/strongloop/express.svg</code></td>
   </tr>
   <tr><th> David: </th>
+    <td><img src='/david/optional/elnounch/byebye.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/optional/elnounch/byebye.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
     <td><img src='/david/peer/webcomponents/generator-element.svg' alt=''/></td>
     <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
   </tr>
