segiddins, not seggidins

--- a/try.html
+++ b/try.html
@@ -761,8 +761,8 @@ is where the current server got started.
 <a class='photo' href='https://github.com/Mikulas'>
   <img alt='Mikulas' src='https://gravatar.com/avatar/daa06ea257d7820ff84735a55b931ec8'>
 </a>
-<a class='photo' href='https://github.com/seggidins'>
-  <img alt='seggidins' src='https://avatars.githubusercontent.com/u/1946610?s=80'>
+<a class='photo' href='https://github.com/segiddins'>
+  <img alt='segiddins' src='https://avatars.githubusercontent.com/u/1946610?s=80'>
 </a>
 <a class='photo' href='https://github.com/SonicHedgehog'>
   <img alt='SonicHedgehog' src='https://avatars.githubusercontent.com/u/652793?s=80'>
