website: codecov, docker, ruby

--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/codecov/c/github/codecov/example-python.svg' alt=''/></td>
     <td><code>https://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
   </tr>
+  <tr><th> Codecov branch: </th>
+    <td><img src='https://img.shields.io/codecov/c/github/codecov/example-python/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/codecov/c/github/codecov/example-python/master.svg</code></td>
+  </tr>
+  <tr><th> Codecov private: </th>
+    <td><img src='https://img.shields.io/codecov/c/github/codecov/example-python.svg' alt=''/></td>
+    <td><code>https://img.shields.io/codecov/c/token/YOURTOKEN/github/codecov/example-python.svg</code></td>
+  </tr>
   <tr><th> Coverity Scan: </th>
     <td><img src='https://img.shields.io/coverity/scan/3997.svg' alt=''/></td>
     <td><code>https://img.shields.io/coverity/scan/3997.svg</code></td>
@@ -582,9 +590,25 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/gem/u/raphink.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/u/raphink.svg</code></td>
   </tr>
+  <tr><th data-keywords='ruby'> Gems: </th>
+  <td><img src='https://img.shields.io/gem/rt/puppet.svg' alt=''/></td>
+  <td><code>https://img.shields.io/gem/rt/puppet.svg</code></td>
+  </tr>
+  <tr><th data-keywords='ruby'> Gems: </th>
+  <td><img src='https://img.shields.io/gem/rd/facter.svg' alt=''/></td>
+  <td><code>https://img.shields.io/gem/rd/facter.svg</code></td>
+  </tr>
   <tr><th data-keywords='dub'> DUB: </th>
   <td><img src='https://img.shields.io/dub/l/vibe-d.svg' alt=''/></td>
   <td><code>https://img.shields.io/dub/l/vibe-d.svg</code></td>
+  </tr>
+  <tr><th data-keywords='docker stars'> Docker Stars: </th>
+  <td><img src='https://img.shields.io/docker/stars/_/ubuntu.svg' alt=''/></td>
+  <td><code>https://img.shields.io/docker/stars/_/ubuntu.svg</code></td>
+  </tr>
+  <tr><th data-keywords='docker pulls'> Docker Pulls: </th>
+  <td><img src='https://img.shields.io/docker/pulls/mashape/kong.svg' alt=''/></td>
+  <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
   </tr>
 </tbody></table>
 
