Added token support to CircleCI badges

--- a/try.html
+++ b/try.html
@@ -112,6 +112,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg</code></td>
   </tr>
+  <tr><th> CircleCI token: </th>
+      <td><img src='/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/BrightFlair/PHP.Gt/master.svg</code></td>
+  </tr>
   <tr><th> Jenkins: </th>
     <td><img src='/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
