Add wercker v3 integration

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/wercker/ci/54330318b4ce963d50020750.svg' alt=''/></td>
     <td><code>https://img.shields.io/wercker/ci/54330318b4ce963d50020750.svg</code></td>
   </tr>
+  <tr><th> Wercker (v3): </th>
+    <td><img src='https://img.shields.io/wercker/ci/wercker/docs.svg' alt=''/></td>
+    <td><code>https://img.shields.io/wercker/ci/wercker/docs.svg</code></td>
+  </tr>
   <tr><th> TeamCity CodeBetter: </th>
     <td><img src='https://img.shields.io/teamcity/codebetter/bt428.svg' alt=''/></td>
     <td><code>https://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
