Remove old Wercker from the examples
See #456

--- a/index.html
+++ b/index.html
@@ -74,10 +74,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
   </tr>
   <tr><th> Wercker: </th>
-    <td><img src='https://img.shields.io/wercker/ci/54330318b4ce963d50020750.svg' alt=''/></td>
-    <td><code>https://img.shields.io/wercker/ci/54330318b4ce963d50020750.svg</code></td>
-  </tr>
-  <tr><th> Wercker (v3): </th>
     <td><img src='https://img.shields.io/wercker/ci/wercker/docs.svg' alt=''/></td>
     <td><code>https://img.shields.io/wercker/ci/wercker/docs.svg</code></td>
   </tr>
@@ -474,6 +470,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> David: </th>
     <td><img src='https://img.shields.io/david/dev/strongloop/express.svg' alt=''/></td>
     <td><code>https://img.shields.io/david/dev/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='https://img.shields.io/david/optional/elnounch/byebye.svg' alt=''/></td>
+    <td><code>https://img.shields.io/david/optional/elnounch/byebye.svg</code></td>
   </tr>
   <tr><th> David: </th>
     <td><img src='https://img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
