--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@ And tell us, we might be able to bring it to you anyway!
 <a href="https://twitter.com/Shields_io" class="twitter-follow-button"
   data-show-count="false">Follow @Shields_io</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-<a href='https://www.gittip.com/Shields/'><img src='https://img.shields.io/gittip/shields.svg?style=flat' alt='Tip us!'/></a>
+<a href='https://www.gratipay.com/Shields/'><img src='https://img.shields.io/gratipay/Shields.svg?style=social&label=Donate' alt='Donate to us!'/></a>
 <iframe src="http://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
   style="border:0; background-color:transparent"
   width="95" height="20"></iframe>
