--- a/try.html
+++ b/try.html
@@ -172,6 +172,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/coverity/scan/3997.svg' alt=''/></td>
     <td><code>https://img.shields.io/coverity/scan/3997.svg</code></td>
   </tr>
+  <tr><th> Coverity Code Advisor On Demand: </th>
+    <td><img src='/coverity/ondemand/streams/1234.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coverity/ondemand/streams/1234.svg</code></td>
+  </tr>
   <tr><th> HHVM: </th>
     <td><img src='/hhvm/symfony/symfony.svg' alt=''/></td>
     <td><code>https://img.shields.io/hhvm/symfony/symfony.svg</code></td>
