Add wheel/python-version/python-implementation/status badage for PyPI.
To replace the pypipins: https://github.com/badges/pypipins/issues/39

--- a/try.html
+++ b/try.html
@@ -518,6 +518,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/pypi/l/Django.svg' alt=''/></td>
     <td><code>https://img.shields.io/pypi/l/Django.svg</code></td>
   </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='/pypi/wheel/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/wheel/Django.svg</code></td>
+  </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='/pypi/py_versions/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/py_versions/Django.svg</code></td>
+  </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='/pypi/implementation/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/implementation/Django.svg</code></td>
+  </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='/pypi/status/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/status/Django.svg</code></td>
+  </tr>
   <tr><th> Hex.pm: </th>
     <td><img src='/hexpm/l/plug.svg' alt=''/></td>
     <td><code>https://img.shields.io/hexpm/l/plug.svg</code></td>
