remove underline in url.

--- a/try.html
+++ b/try.html
@@ -523,8 +523,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/pypi/wheel/Django.svg</code></td>
   </tr>
   <tr><th data-keywords='python'> PyPI: </th>
-    <td><img src='/pypi/py_versions/Django.svg' alt=''/></td>
-    <td><code>https://img.shields.io/pypi/py_versions/Django.svg</code></td>
+    <td><img src='/pypi/pyversions/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/pyversions/Django.svg</code></td>
   </tr>
   <tr><th data-keywords='python'> PyPI: </th>
     <td><img src='/pypi/implementation/Django.svg' alt=''/></td>
