website: Shippable, PyPI

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg</code></td>
   </tr>
+  <tr><th> Shippable: </th>
+      <td><img src='https://img.shields.io/shippable/54d119db5ab6cc13528ab183.svg' alt=''/></td>
+      <td><code>https://img.shields.io/shippable/54d119db5ab6cc13528ab183.svg</code></td>
+  </tr>
+  <tr><th> Shippable branch: </th>
+      <td><img src='https://img.shields.io/shippable/54d119db5ab6cc13528ab183/master.svg' alt=''/></td>
+      <td><code>https://img.shields.io/shippable/54d119db5ab6cc13528ab183/master.svg</code></td>
+  </tr>
   <tr><th> Jenkins: </th>
     <td><img src='https://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
@@ -511,6 +519,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/pypi/l/Django.svg' alt=''/></td>
     <td><code>https://img.shields.io/pypi/l/Django.svg</code></td>
   </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='https://img.shields.io/pypi/wheel/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/wheel/Django.svg</code></td>
+  </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='https://img.shields.io/pypi/pyversions/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/pyversions/Django.svg</code></td>
+  </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='https://img.shields.io/pypi/implementation/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/implementation/Django.svg</code></td>
+  </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='https://img.shields.io/pypi/status/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/status/Django.svg</code></td>
+  </tr>
   <tr><th> Hex.pm: </th>
     <td><img src='https://img.shields.io/hexpm/l/plug.svg' alt=''/></td>
     <td><code>https://img.shields.io/hexpm/l/plug.svg</code></td>
@@ -680,8 +704,8 @@ The following styles are available (flat is the default as of Feb 1st 2015):
   <td><code>https://img.shields.io/badge/style-flat-green.svg?style=flat</code></td>
   </tr>
   <tr>
-  <td><img src='https://img.shields.io/badge/style-flat--square-green.svg?style=flat-square' alt=''/></td>
-  <td><code>https://img.shields.io/badge/style-flat--square-green.svg?style=flat-square</code></td>
+  <td><img src='https://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square' alt=''/></td>
+  <td><code>https://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square</code></td>
   </tr>
 </tbody></table>
 
