--- a/try.html
+++ b/try.html
@@ -172,9 +172,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/coverity/scan/3997.svg' alt=''/></td>
     <td><code>https://img.shields.io/coverity/scan/3997.svg</code></td>
   </tr>
-  <tr><th> Coverity Code Advisor On Demand: </th>
-    <td><img src='/coverity/ondemand/streams/1234.svg' alt=''/></td>
-    <td><code>https://img.shields.io/coverity/ondemand/streams/1234.svg</code></td>
+  <tr><th> Coverity Code Advisor On Demand Stream Badge: </th>
+    <td><img src='/coverity/ondemand/streams/STREAM.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coverity/ondemand/streams/STREAM.svg</code></td>
+  </tr>
+  <tr><th> Coverity Code Advisor On Demand Job Badge: </th>
+    <td><img src='/coverity/ondemand/jobs/JOB.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coverity/ondemand/jobs/JOB.svg</code></td>
   </tr>
   <tr><th> HHVM: </th>
     <td><img src='/hhvm/symfony/symfony.svg' alt=''/></td>
