--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg</code></td>
   </tr>
+  <tr><th> CircleCI token: </th>
+      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/BrightFlair/PHP.Gt/master.svg</code></td>
+  </tr>
   <tr><th> Shippable: </th>
       <td><img src='https://img.shields.io/shippable/54d119db5ab6cc13528ab183.svg' alt=''/></td>
       <td><code>https://img.shields.io/shippable/54d119db5ab6cc13528ab183.svg</code></td>
@@ -180,6 +184,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Coverity Scan: </th>
     <td><img src='https://img.shields.io/coverity/scan/3997.svg' alt=''/></td>
     <td><code>https://img.shields.io/coverity/scan/3997.svg</code></td>
+  </tr>
+  <tr><th> Coverity Code Advisor On Demand Stream Badge: </th>
+    <td><img src='https://img.shields.io/coverity/ondemand/streams/STREAM.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coverity/ondemand/streams/STREAM.svg</code></td>
+  </tr>
+  <tr><th> Coverity Code Advisor On Demand Job Badge: </th>
+    <td><img src='https://img.shields.io/coverity/ondemand/jobs/JOB.svg' alt=''/></td>
+    <td><code>https://img.shields.io/coverity/ondemand/jobs/JOB.svg</code></td>
   </tr>
   <tr><th> HHVM: </th>
     <td><img src='https://img.shields.io/hhvm/symfony/symfony.svg' alt=''/></td>
