PyPI: format badge
Part of #465

--- a/try.html
+++ b/try.html
@@ -535,6 +535,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/pypi/wheel/Django.svg</code></td>
   </tr>
   <tr><th data-keywords='python'> PyPI: </th>
+    <td><img src='/pypi/format/Django.svg' alt=''/></td>
+    <td><code>https://img.shields.io/pypi/format/Django.svg</code></td>
+  </tr>
+  <tr><th data-keywords='python'> PyPI: </th>
     <td><img src='/pypi/pyversions/Django.svg' alt=''/></td>
     <td><code>https://img.shields.io/pypi/pyversions/Django.svg</code></td>
   </tr>
