--- a/try.html
+++ b/try.html
@@ -460,6 +460,26 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </tr>
 </tbody></table>
 
+<h3 id="social"> Social </h3>
+<table class='badge'><tbody>
+  <tr><th> GitHub forks: </th>
+  <td><img src='/github/forks/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
+  </tr>
+  <tr><th> GitHub stars: </th>
+  <td><img src='/github/stars/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/stars/badges/shields.svg</code></td>
+  </tr>
+  <tr><th> GitHub followers: </th>
+  <td><img src='/github/followers/espadrine.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
+  </tr>
+  <tr><th> Twitter: </th>
+  <td><img src='/twitter/url/https/shields.io.svg' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/url/https/shields.io.svg</code></td>
+  </tr>
+</tbody></table>
+
 <h3 id="miscellaneous"> Miscellaneous </h3>
 <table class='badge'><tbody>
   <tr><th> Gratipay: </th>
@@ -581,18 +601,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='GitHub'></th>
   <td><img src='/github/issues-raw/badges/shields.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
-  </tr>
-  <tr><th> GitHub forks: </th>
-  <td><img src='/github/forks/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/forks/badges/shields.svg</code></td>
-  </tr>
-  <tr><th> GitHub stars: </th>
-  <td><img src='/github/stars/badges/shields.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/stars/badges/shields.svg</code></td>
-  </tr>
-  <tr><th> GitHub followers: </th>
-  <td><img src='/github/followers/espadrine.svg' alt=''/></td>
-  <td><code>https://img.shields.io/github/followers/espadrine.svg</code></td>
   </tr>
   <tr><th data-keywords='github license'> GitHub license: </th>
   <td><img src='/github/license/mashape/apistatus.svg' alt=''/></td>
