--- a/index.html
+++ b/index.html
@@ -547,6 +547,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/apm/l/vim-mode.svg' alt=''/></td>
     <td><code>https://img.shields.io/apm/l/vim-mode.svg</code></td>
   </tr>
+  <tr><th> Bower: </th>
+  <td><img src='https://img.shields.io/bower/l/bootstrap.svg' alt='' /></td>
+  <td><code>https://img.shields.io/bower/l/bootstrap.svg</code></td>
+  </tr>
   <tr><th data-keywords='python'> PyPI: </th>
     <td><img src='https://img.shields.io/pypi/l/Django.svg' alt=''/></td>
     <td><code>https://img.shields.io/pypi/l/Django.svg</code></td>
